--- a/patasepelos/Form9.resx
+++ b/patasepelos/Form9.resx
@@ -767,4 +767,7 @@
         //b/A5XZvSw3pBUnAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
